--- a/kocom.yaml
+++ b/kocom.yaml
@@ -59,26 +59,6 @@ logger:
     uartex: DEBUG
 
 light:
-  # 거실 조명 (Room 0) - 단일 조명
-  - platform: uartex
-    name: "Living Room Light"
-    id: living_room_light
-    state:
-      data: [0x30, 0xd0, 0x00, 0x0e, 0x00]
-      mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
-    state_on:
-      offset: 8
-      data: [0xff]
-    state_off:
-      offset: 8
-      data: [0x00]
-    command_on:
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x00, 0x00, 0x00, 0x00, 0xff, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
-    command_off:
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
-
   # 안방 조명 1 (Room 1)
   - platform: uartex
     name: "Master Room Light 1"
@@ -98,6 +78,10 @@ light:
     command_off:
       data: [0x30, 0xbc, 0x00, 0x0e, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
       ack: [0x30, 0xdc]
+    command_update: 
+      data: [0x30, 0xbc, 0x00, 0x0e, 0x01, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+      ack: [0x30, 0xdc]
+    update_interval: 2h
 
   # 안방 조명 2 (Room 1)
   - platform: uartex
@@ -118,6 +102,10 @@ light:
     command_off:
       data: [0x30, 0xbc, 0x00, 0x0e, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
       ack: [0x30, 0xdc]
+    command_update: 
+      data: [0x30, 0xbc, 0x00, 0x0e, 0x01, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+      ack: [0x30, 0xdc]
+    update_interval: 2h
 
   # 세나방 (Room 2)
   - platform: uartex
@@ -143,47 +131,7 @@ light:
       ack: [0x30, 0xdc]
     update_interval: 2h
 
-  # 안방화장실 조명 2 (Room 2)
-  - platform: uartex
-    name: "Master Bathroom Light 2"
-    id: master_bathroom_light_2
-    state:
-      data: [0x30, 0xd0, 0x00, 0x0e, 0x02]
-      mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
-    state_on:
-      offset: 9
-      data: [0xff]
-    state_off:
-      offset: 9
-      data: [0x00]
-    command_on:
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x02, 0x00, 0x00, 0x00, 0x00, 0xff, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
-    command_off:
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x02, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
-
-  # 안방화장실 조명 3 (Room 2)
-  - platform: uartex
-    name: "Master Bathroom Light 3"
-    id: master_bathroom_light_3
-    state:
-      data: [0x30, 0xd0, 0x00, 0x0e, 0x02]
-      mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
-    state_on:
-      offset: 10
-      data: [0xff]
-    state_off:
-      offset: 10
-      data: [0x00]
-    command_on:
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x02, 0x00, 0x00, 0x00, 0x00, 0x00, 0xff, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
-    command_off:
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x02, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
-
-  # 사라방 조명 (Room 3)
+ # 사라방 조명 (Room 3)
   - platform: uartex
     name: "Room 3 Light"
     id: room_3_light
@@ -276,11 +224,11 @@ light:
       data: [0x30, 0xbc, 0x00, 0x0e, 0x04, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
       ack: [0x30, 0xdc]
     update_interval: 2h
-    
-  # 거실화장실 조명 1 (Room 5)
+
+  # 주방 조명 1
   - platform: uartex
-    name: "Guest Bathroom Light 1"
-    id: guest_bathroom_light_1
+    name: "Kitchen Light 1"
+    id: kitchen_light_1
     state:
       data: [0x30, 0xd0, 0x00, 0x0e, 0x05]
       mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
@@ -296,11 +244,15 @@ light:
     command_off:
       data: [0x30, 0xbc, 0x00, 0x0e, 0x05, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
       ack: [0x30, 0xdc]
+    command_update: 
+      data: [0x30, 0xbc, 0x00, 0x0e, 0x05, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+      ack: [0x30, 0xdc]
+    update_interval: 2h
 
-  # 거실화장실 조명 2 (Room 5)
+  # 주방 조명 2
   - platform: uartex
-    name: "Guest Bathroom Light 2"
-    id: guest_bathroom_light_2
+    name: "Kitchen Light 2"
+    id: kitchen_light_2
     state:
       data: [0x30, 0xd0, 0x00, 0x0e, 0x05]
       mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
@@ -316,11 +268,106 @@ light:
     command_off:
       data: [0x30, 0xbc, 0x00, 0x0e, 0x05, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
       ack: [0x30, 0xdc]
+    command_update: 
+      data: [0x30, 0xbc, 0x00, 0x0e, 0x05, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+      ack: [0x30, 0xdc]
+    update_interval: 2h
+
+  # 주방 조명 3
+  - platform: uartex
+    name: "Kitchen Light 3"
+    id: kitchen_light_3
+    state:
+      data: [0x30, 0xd0, 0x00, 0x0e, 0x05]
+      mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
+    state_on:
+      offset: 10
+      data: [0xff]
+    state_off:
+      offset: 10
+      data: [0x00]
+    command_on:
+      data: [0x30, 0xbc, 0x00, 0x0e, 0x05, 0x00, 0x00, 0x00, 0x00, 0xff, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+      ack: [0x30, 0xdc]
+    command_off:
+      data: [0x30, 0xbc, 0x00, 0x0e, 0x05, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+      ack: [0x30, 0xdc]
+    command_update: 
+      data: [0x30, 0xbc, 0x00, 0x0e, 0x05, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+      ack: [0x30, 0xdc]
+    update_interval: 2h
+    
+  # 거실 조명 (Room 0) - 단일 조명
+  - platform: uartex
+    name: "Living Room Light"
+    id: living_room_light
+    state:
+      data: [0x30, 0xd0, 0x00, 0x0e, 0x00]
+      mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
+    state_on:
+      offset: 8
+      data: [0xff]
+    state_off:
+      offset: 8
+      data: [0x00]
+    command_on:
+      data: [0x30, 0xbc, 0x00, 0x0e, 0x00, 0x00, 0x00, 0x00, 0xff, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+      ack: [0x30, 0xdc]
+    command_off:
+      data: [0x30, 0xbc, 0x00, 0x0e, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+      ack: [0x30, 0xdc]
+
+
+  # 안방화장실 조명 2 (Room 2)
+  - platform: uartex
+    name: "Master Bathroom Light 2"
+    id: master_bathroom_light_2
+    state:
+      data: [0x30, 0xd0, 0x00, 0x0e, 0x02]
+      mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
+    state_on:
+      offset: 9
+      data: [0xff]
+    state_off:
+      offset: 9
+      data: [0x00]
+    command_on:
+      data: [0x30, 0xbc, 0x00, 0x0e, 0x02, 0x00, 0x00, 0x00, 0x00, 0xff, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+      ack: [0x30, 0xdc]
+    command_off:
+      data: [0x30, 0xbc, 0x00, 0x0e, 0x02, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+      ack: [0x30, 0xdc]
+
+  # 안방화장실 조명 3 (Room 2)
+  - platform: uartex
+    name: "Master Bathroom Light 3"
+    id: master_bathroom_light_3
+    state:
+      data: [0x30, 0xd0, 0x00, 0x0e, 0x02]
+      mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
+    state_on:
+      offset: 10
+      data: [0xff]
+    state_off:
+      offset: 10
+      data: [0x00]
+    command_on:
+      data: [0x30, 0xbc, 0x00, 0x0e, 0x02, 0x00, 0x00, 0x00, 0x00, 0x00, 0xff, 0x00, 0x00, 0x00, 0x00, 0x00]
+      ack: [0x30, 0xdc]
+    command_off:
+      data: [0x30, 0xbc, 0x00, 0x0e, 0x02, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+      ack: [0x30, 0xdc]
+
+ 
+
+
+    
+
 
   # 주방 조명 (Room 6)
   - platform: uartex
-    name: "Kitchen Light 1"
-    id: kitchen_light_1
+    name: "Guest Bathroom Light 1"
+    id: guest_bathroom_light_1
     state:
       data: [0x30, 0xd0, 0x00, 0x0e, 0x06]
       mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
@@ -338,8 +385,8 @@ light:
       ack: [0x30, 0xdc]
 
   - platform: uartex
-    name: "Kitchen Light 2"
-    id: kitchen_light_2
+    name: "Guest Bathroom Light 2"
+    id: guest_bathroom_light_2
     state:
       data: [0x30, 0xd0, 0x00, 0x0e, 0x06]
       mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
