--- a/kocom.yaml
+++ b/kocom.yaml
@@ -287,7 +287,7 @@ light:
       offset: 10
       data: [0x00]
     command_on:
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x05, 0x00, 0x00, 0x00, 0x00, 0xff, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+      data: [0x30, 0xbc, 0x00, 0x0e, 0x05, 0x00, 0x00, 0x00, 0x00, 0x00, 0xff, 0x00, 0x00, 0x00, 0x00, 0x00]
       ack: [0x30, 0xdc]
     command_off:
       data: [0x30, 0xbc, 0x00, 0x0e, 0x05, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
