--- a/kocom.yaml
+++ b/kocom.yaml
@@ -81,43 +81,58 @@ logger:
   #AA 55 / 30 BC 00 01 00 0E 01 00 00 00 00 00 00 00 00 00 FC / 0D0D 1번전등 OFF
 # 1. 상태 저장을 위한 변수 추가
 globals:
-  - id: l1_state
-    type: uint8_t
-    initial_value: '0x00'
-  - id: l2_state
-    type: uint8_t
-    initial_value: '0x00'
+  - id: m_light_1 # 1번 조명 상태 저장용
+    type: bool
+    initial_value: 'false'
+  - id: m_light_2 # 2번 조명 상태 저장용
+    type: bool
+    initial_value: 'false'
 
 light:
   - platform: template
     name: "Master Room Light 1"
     id: master_room_light_1
+    lambda: "return id(m_light_1);"
     on_turn_on:
-      then:
-        - lambda: |-
-            id(l1_state) = 0xFF;
-            id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, id(l1_state), id(l2_state), 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, (uint8_t)(0xFC - (id(l1_state)==0xFF?1:0) - (id(l2_state)==0xFF?1:0)), 0x0D, 0x0D});
+      - globals.set: { id: m_light_1, value: true }
+      - script.execute: send_kocom_packet
     on_turn_off:
-      then:
-        - lambda: |-
-            id(l1_state) = 0x00;
-            id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, id(l1_state), id(l2_state), 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, (uint8_t)(0xFC - (id(l1_state)==0xFF?1:0) - (id(l2_state)==0xFF?1:0)), 0x0D, 0x0D});
+      - globals.set: { id: m_light_1, value: false }
+      - script.execute: send_kocom_packet
 
   - platform: template
     name: "Master Room Light 2"
     id: master_room_light_2
+    lambda: "return id(m_light_2);"
     on_turn_on:
-      then:
-        - lambda: |-
-            id(l2_state) = 0xFF;
-            id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, id(l1_state), id(l2_state), 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, (uint8_t)(0xFC - (id(l1_state)==0xFF?1:0) - (id(l2_state)==0xFF?1:0)), 0x0D, 0x0D});
+      - globals.set: { id: m_light_2, value: true }
+      - script.execute: send_kocom_packet
     on_turn_off:
-      then:
-        - lambda: |-
-            id(l2_state) = 0x00;
-            id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, id(l1_state), id(l2_state), 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, (uint8_t)(0xFC - (id(l1_state)==0xFF?1:0) - (id(l2_state)==0xFF?1:0)), 0x0D, 0x0D});
-        
+      - globals.set: { id: m_light_2, value: false }
+      - script.execute: send_kocom_packet
 
+script:
+  - id: send_kocom_packet
+    then:
+      - uart.write:
+          data: !lambda |-
+            uint8_t l1 = id(m_light_1) ? 0xFF : 0x00;
+            uint8_t l2 = id(m_light_2) ? 0xFF : 0x00;
+            
+            // 패킷 생성 (AA 55 제외한 본체)
+            std::vector<uint8_t> pkt = {0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00};
+            
+            // 체크섬 계산 (단순 합산 방식 예시 - 실제 환경에 맞춰 수정 가능)
+            uint8_t checksum = 0;
+            for(uint8_t v : pkt) checksum += v;
+            
+            // 최종 패킷 조립 및 발송
+            std::vector<uint8_t> full_pkt = {0xAA, 0x55};
+            full_pkt.insert(full_pkt.end(), pkt.begin(), pkt.end());
+            full_pkt.push_back(checksum); // 계산된 체크섬
+            full_pkt.push_back(0x0D);
+            full_pkt.push_back(0x0D);
+            return full_pkt;
 # 아래는 원        
 #  - platform: uartex
 #    name: "Master Room Light 1"
