--- a/kocom.yaml
+++ b/kocom.yaml
@@ -82,7 +82,7 @@ logger:
 
 
 light:
-# 아래는 원        
+  # 안방 조명 1
   - platform: uartex
     name: "Master Room Light 1"
     id: master_room_light_1
@@ -96,17 +96,29 @@ light:
       offset: 8
       data: [0x00]
     command_on:
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x01, 0x00, 0x00, 0x00, 0xff, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
+      - lambda: |-
+          if (id(master_room_light_2).state) {
+            // 2번이 켜져있음 -> 1번 ON, 2번 ON (FA)
+            id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFA, 0x0D, 0x0D});
+          } else {
+            // 2번이 꺼져있음 -> 1번 ON, 2번 OFF (FB)
+            id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D});
+          }
     command_off:
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x01, 0x00, 0x00, 0x00, 0x00, 0xff, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
+      - lambda: |-
+          if (id(master_room_light_2).state) {
+            // 2번이 켜져있음 -> 1번 OFF, 2번 ON (FB)
+            id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D});
+          } else {
+            // 2번이 꺼져있음 -> 1번 OFF, 2번 OFF (FC)
+            id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFC, 0x0D, 0x0D});
+          }
     command_update: 
       data: [0x30, 0xbc, 0x00, 0x0e, 0x01, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
       ack: [0x30, 0xdc]
     update_interval: 2h
 
-  # 안방 조명 2 (Room 1)
+  # 안방 조명 2
   - platform: uartex
     name: "Master Room Light 2"
     id: master_room_light_2
@@ -120,11 +132,23 @@ light:
       offset: 9
       data: [0x00]
     command_on:
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x01, 0x00, 0x00, 0x00, 0x00, 0xff, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
+      - lambda: |-
+          if (id(master_room_light_1).state) {
+            // 1번이 켜져있음 -> 1번 ON, 2번 ON (FA)
+            id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFA, 0x0D, 0x0D});
+          } else {
+            // 1번이 꺼져있음 -> 1번 OFF, 2번 ON (FB)
+            id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D});
+          }
     command_off:
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x01, 0x00, 0x00, 0x00, 0xff, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
+      - lambda: |-
+          if (id(master_room_light_1).state) {
+            // 1번이 켜져있음 -> 1번 ON, 2번 OFF (FB)
+            id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D});
+          } else {
+            // 1번이 꺼져있음 -> 1번 OFF, 2번 OFF (FC)
+            id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFC, 0x0D, 0x0D});
+          }
     command_update: 
       data: [0x30, 0xbc, 0x00, 0x0e, 0x01, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
       ack: [0x30, 0xdc]
