--- a/kocom.yaml
+++ b/kocom.yaml
@@ -82,77 +82,63 @@ logger:
 
 
 light:
-  # 안방 조명 1
+  # 1. 상태 읽기용 (기존 설정에 internal: true 추가해서 화면에서 숨김)
   - platform: uartex
+    id: master_light_1_raw
+    internal: true
+    state:
+      data: [0x30, 0xd0, 0x00, 0x0e, 0x01]
+      mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
+    state_on: { offset: 8, data: [0xff] }
+    state_off: { offset: 8, data: [0x00] }
+
+  - platform: uartex
+    id: master_light_2_raw
+    internal: true
+    state:
+      data: [0x30, 0xd0, 0x00, 0x0e, 0x01]
+      mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
+    state_on: { offset: 9, data: [0xff] }
+    state_off: { offset: 9, data: [0x00] }
+
+  # 2. 실제 사용자가 제어할 진짜 전등 (if문 적용)
+  - platform: template
     name: "Master Room Light 1"
     id: master_room_light_1
-    state:
-      data: [0x30, 0xd0, 0x00, 0x0e, 0x01]
-      mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
-    state_on:
-      offset: 8
-      data: [0xff]
-    state_off:
-      offset: 8
-      data: [0x00]
-    command_on:
+    lambda: "return id(master_light_1_raw).state;"
+    on_turn_on:
       - lambda: |-
-          if (id(master_room_light_2).state) {
-            // 2번이 켜져있음 -> 1번 ON, 2번 ON (FA)
+          if (id(master_light_2_raw).state) {
             id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFA, 0x0D, 0x0D});
           } else {
-            // 2번이 꺼져있음 -> 1번 ON, 2번 OFF (FB)
             id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D});
           }
-    command_off:
+    on_turn_off:
       - lambda: |-
-          if (id(master_room_light_2).state) {
-            // 2번이 켜져있음 -> 1번 OFF, 2번 ON (FB)
+          if (id(master_light_2_raw).state) {
             id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D});
           } else {
-            // 2번이 꺼져있음 -> 1번 OFF, 2번 OFF (FC)
             id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFC, 0x0D, 0x0D});
           }
-    command_update: 
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x01, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
-    update_interval: 2h
 
-  # 안방 조명 2
-  - platform: uartex
+  - platform: template
     name: "Master Room Light 2"
     id: master_room_light_2
-    state:
-      data: [0x30, 0xd0, 0x00, 0x0e, 0x01]
-      mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
-    state_on:
-      offset: 9
-      data: [0xff]
-    state_off:
-      offset: 9
-      data: [0x00]
-    command_on:
+    lambda: "return id(master_light_2_raw).state;"
+    on_turn_on:
       - lambda: |-
-          if (id(master_room_light_1).state) {
-            // 1번이 켜져있음 -> 1번 ON, 2번 ON (FA)
+          if (id(master_light_1_raw).state) {
             id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFA, 0x0D, 0x0D});
           } else {
-            // 1번이 꺼져있음 -> 1번 OFF, 2번 ON (FB)
             id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D});
           }
-    command_off:
+    on_turn_off:
       - lambda: |-
-          if (id(master_room_light_1).state) {
-            // 1번이 켜져있음 -> 1번 ON, 2번 OFF (FB)
+          if (id(master_light_1_raw).state) {
             id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D});
           } else {
-            // 1번이 꺼져있음 -> 1번 OFF, 2번 OFF (FC)
             id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFC, 0x0D, 0x0D});
           }
-    command_update: 
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x01, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
-    update_interval: 2h
 
   # 세나방 (Room 2)
   - platform: uartex
