--- a/kocom.yaml
+++ b/kocom.yaml
@@ -82,7 +82,7 @@ logger:
 
 
 light:
-  # 1. 상태 읽기용 (기존 설정에 internal: true 추가해서 화면에서 숨김)
+  # 1. 상태 읽기용 (숨겨진 전등)
   - platform: uartex
     id: master_light_1_raw
     internal: true
@@ -91,6 +91,10 @@ light:
       mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
     state_on: { offset: 8, data: [0xff] }
     state_off: { offset: 8, data: [0x00] }
+    command_update: 
+      data: [0x30, 0xbc, 0x00, 0x0e, 0x01, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
+      ack: [0x30, 0xdc]
+    update_interval: 2h
 
   - platform: uartex
     id: master_light_2_raw
@@ -101,44 +105,34 @@ light:
     state_on: { offset: 9, data: [0xff] }
     state_off: { offset: 9, data: [0x00] }
 
-  # 2. 실제 사용자가 제어할 진짜 전등 (if문 적용)
+  # 2. 실제 제어용 (사용자에게 보이는 전등)
   - platform: template
     name: "Master Room Light 1"
     id: master_room_light_1
-    lambda: "return id(master_light_1_raw).state;"
+    lambda: |-
+      return id(master_light_1_raw).state;
     on_turn_on:
       - lambda: |-
-          if (id(master_light_2_raw).state) {
-            id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFA, 0x0D, 0x0D});
-          } else {
-            id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D});
-          }
+          uint8_t l2 = id(master_light_2_raw).state ? 0xFF : 0x00;
+          id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, (uint8_t)(l2 == 0xFF ? 0xFA : 0xFB), 0x0D, 0x0D});
     on_turn_off:
       - lambda: |-
-          if (id(master_light_2_raw).state) {
-            id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D});
-          } else {
-            id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFC, 0x0D, 0x0D});
-          }
+          uint8_t l2 = id(master_light_2_raw).state ? 0xFF : 0x00;
+          id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, (uint8_t)(l2 == 0xFF ? 0xFB : 0xFC), 0x0D, 0x0D});
 
   - platform: template
     name: "Master Room Light 2"
     id: master_room_light_2
-    lambda: "return id(master_light_2_raw).state;"
+    lambda: |-
+      return id(master_light_2_raw).state;
     on_turn_on:
       - lambda: |-
-          if (id(master_light_1_raw).state) {
-            id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFA, 0x0D, 0x0D});
-          } else {
-            id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D});
-          }
+          uint8_t l1 = id(master_light_1_raw).state ? 0xFF : 0x00;
+          id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, (uint8_t)(l1 == 0xFF ? 0xFA : 0xFB), 0x0D, 0x0D});
     on_turn_off:
       - lambda: |-
-          if (id(master_light_1_raw).state) {
-            id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D});
-          } else {
-            id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFC, 0x0D, 0x0D});
-          }
+          uint8_t l1 = id(master_light_1_raw).state ? 0xFF : 0x00;
+          id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, (uint8_t)(l1 == 0xFF ? 0xFB : 0xFC), 0x0D, 0x0D});
 
   # 세나방 (Room 2)
   - platform: uartex
