--- a/kocom.yaml
+++ b/kocom.yaml
@@ -82,58 +82,70 @@ logger:
 
 
 light:
-  # 1. 상태 읽기용 (숨겨진 전등)
+  # 안방 조명 1
   - platform: uartex
-    id: master_light_1_raw
-    internal: true
+    name: "Master Room Light 1"
+    id: master_room_light_1
     state:
       data: [0x30, 0xd0, 0x00, 0x0e, 0x01]
       mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
     state_on: { offset: 8, data: [0xff] }
     state_off: { offset: 8, data: [0x00] }
-    command_update: 
-      data: [0x30, 0xbc, 0x00, 0x0e, 0x01, 0x01, 0x00, 0x3a, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00]
-      ack: [0x30, 0xdc]
-    update_interval: 2h
+    # 1번 전등을 켤 때 실행되는 로직
+    on_turn_on:
+      then:
+        - lambda: |-
+            if (id(master_room_light_2).state) {
+              // [상태] 2번이 이미 켜져 있음 -> 1번 ON, 2번 ON (체크섬 FA)
+              id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFA, 0x0D, 0x0D});
+            } else {
+              // [상태] 2번이 꺼져 있음 -> 1번 ON, 2번 OFF (체크섬 FB)
+              id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D});
+            }
+    # 1번 전등을 끌 때 실행되는 로직
+    on_turn_off:
+      then:
+        - lambda: |-
+            if (id(master_room_light_2).state) {
+              // [상태] 2번이 켜져 있음 -> 1번 OFF, 2번 ON (체크섬 FB)
+              id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D});
+            } else {
+              // [상태] 2번이 꺼져 있음 -> 1번 OFF, 2번 OFF (체크섬 FC)
+              id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFC, 0x0D, 0x0D});
+            }
 
+  # 안방 조명 2
   - platform: uartex
-    id: master_light_2_raw
-    internal: true
+    name: "Master Room Light 2"
+    id: master_room_light_2
     state:
       data: [0x30, 0xd0, 0x00, 0x0e, 0x01]
       mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
     state_on: { offset: 9, data: [0xff] }
     state_off: { offset: 9, data: [0x00] }
-
-  # 2. 실제 제어용 (사용자에게 보이는 전등)
-  - platform: template
-    name: "Master Room Light 1"
-    id: master_room_light_1
-    lambda: |-
-      return id(master_light_1_raw).state;
+    # 2번 전등을 켤 때 실행되는 로직
     on_turn_on:
-      - lambda: |-
-          uint8_t l2 = id(master_light_2_raw).state ? 0xFF : 0x00;
-          id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, (uint8_t)(l2 == 0xFF ? 0xFA : 0xFB), 0x0D, 0x0D});
+      then:
+        - lambda: |-
+            if (id(master_room_light_1).state) {
+              // [상태] 1번이 이미 켜져 있음 -> 1번 ON, 2번 ON (체크섬 FA)
+              id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFA, 0x0D, 0x0D});
+            } else {
+              // [상태] 1번이 꺼져 있음 -> 1번 OFF, 2번 ON (체크섬 FB)
+              id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D});
+            }
+    # 2번 전등을 끌 때 실행되는 로직
     on_turn_off:
-      - lambda: |-
-          uint8_t l2 = id(master_light_2_raw).state ? 0xFF : 0x00;
-          id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, (uint8_t)(l2 == 0xFF ? 0xFB : 0xFC), 0x0D, 0x0D});
-
-  - platform: template
-    name: "Master Room Light 2"
-    id: master_room_light_2
-    lambda: |-
-      return id(master_light_2_raw).state;
-    on_turn_on:
-      - lambda: |-
-          uint8_t l1 = id(master_light_1_raw).state ? 0xFF : 0x00;
-          id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, (uint8_t)(l1 == 0xFF ? 0xFA : 0xFB), 0x0D, 0x0D});
-    on_turn_off:
-      - lambda: |-
-          uint8_t l1 = id(master_light_1_raw).state ? 0xFF : 0x00;
-          id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, (uint8_t)(l1 == 0xFF ? 0xFB : 0xFC), 0x0D, 0x0D});
-
+      then:
+        - lambda: |-
+            if (id(master_room_light_1).state) {
+              // [상태] 1번이 켜져 있음 -> 1번 ON, 2번 OFF (체크섬 FB)
+              id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D});
+            } else {
+              // [상태] 1번이 꺼져 있음 -> 1번 OFF, 2번 OFF (체크섬 FC)
+              id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFC, 0x0D, 0x0D});
+            }
+            
   # 세나방 (Room 2)
   - platform: uartex
     name: "Room 2 Light"
