--- a/kocom.yaml
+++ b/kocom.yaml
@@ -91,27 +91,29 @@ light:
       mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
     state_on: { offset: 8, data: [0xff] }
     state_off: { offset: 8, data: [0x00] }
-    # 1번 전등을 켤 때 실행되는 로직
     on_turn_on:
       then:
         - lambda: |-
-            if (id(master_room_light_2).state) {
-              // [상태] 2번이 이미 켜져 있음 -> 1번 ON, 2번 ON (체크섬 FA)
-              id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFA, 0x0D, 0x0D});
+            if (id(master_room_light_2).remote_values.is_on()) {
+              // 2번이 켜져있음 -> 둘다 ON (FA)
+              static const uint8_t data[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFA, 0x0D, 0x0D};
+              id(uart_bus).write_array(data, 22);
             } else {
-              // [상태] 2번이 꺼져 있음 -> 1번 ON, 2번 OFF (체크섬 FB)
-              id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D});
+              // 2번이 꺼져있음 -> 1번만 ON (FB)
+              static const uint8_t data[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D};
+              id(uart_bus).write_array(data, 22);
             }
-    # 1번 전등을 끌 때 실행되는 로직
     on_turn_off:
       then:
         - lambda: |-
-            if (id(master_room_light_2).state) {
-              // [상태] 2번이 켜져 있음 -> 1번 OFF, 2번 ON (체크섬 FB)
-              id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D});
+            if (id(master_room_light_2).remote_values.is_on()) {
+              // 2번이 켜져있음 -> 2번만 유지 (FB)
+              static const uint8_t data[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D};
+              id(uart_bus).write_array(data, 22);
             } else {
-              // [상태] 2번이 꺼져 있음 -> 1번 OFF, 2번 OFF (체크섬 FC)
-              id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFC, 0x0D, 0x0D});
+              // 둘다 OFF (FC)
+              static const uint8_t data[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFC, 0x0D, 0x0D};
+              id(uart_bus).write_array(data, 22);
             }
 
   # 안방 조명 2
@@ -123,27 +125,29 @@ light:
       mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
     state_on: { offset: 9, data: [0xff] }
     state_off: { offset: 9, data: [0x00] }
-    # 2번 전등을 켤 때 실행되는 로직
     on_turn_on:
       then:
         - lambda: |-
-            if (id(master_room_light_1).state) {
-              // [상태] 1번이 이미 켜져 있음 -> 1번 ON, 2번 ON (체크섬 FA)
-              id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFA, 0x0D, 0x0D});
+            if (id(master_room_light_1).remote_values.is_on()) {
+              // 1번이 켜져있음 -> 둘다 ON (FA)
+              static const uint8_t data[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFA, 0x0D, 0x0D};
+              id(uart_bus).write_array(data, 22);
             } else {
-              // [상태] 1번이 꺼져 있음 -> 1번 OFF, 2번 ON (체크섬 FB)
-              id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D});
+              // 1번이 꺼져있음 -> 2번만 ON (FB)
+              static const uint8_t data[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D};
+              id(uart_bus).write_array(data, 22);
             }
-    # 2번 전등을 끌 때 실행되는 로직
     on_turn_off:
       then:
         - lambda: |-
-            if (id(master_room_light_1).state) {
-              // [상태] 1번이 켜져 있음 -> 1번 ON, 2번 OFF (체크섬 FB)
-              id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D});
+            if (id(master_room_light_1).remote_values.is_on()) {
+              // 1번이 켜져있음 -> 1번만 유지 (FB)
+              static const uint8_t data[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D};
+              id(uart_bus).write_array(data, 22);
             } else {
-              // [상태] 1번이 꺼져 있음 -> 1번 OFF, 2번 OFF (체크섬 FC)
-              id(uart_bus).write_array({0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFC, 0x0D, 0x0D});
+              // 둘다 OFF (FC)
+              static const uint8_t data[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFC, 0x0D, 0x0D};
+              id(uart_bus).write_array(data, 22);
             }
             
   # 세나방 (Room 2)
