--- a/kocom.yaml
+++ b/kocom.yaml
@@ -91,30 +91,45 @@ light:
       mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
     state_on: { offset: 8, data: [0xff] }
     state_off: { offset: 8, data: [0x00] }
+    # command_on/off를 비워두어 내부 충돌 방지
     on_turn_on:
-      then:
-        - lambda: |-
-            if (id(master_room_light_2).remote_values.is_on()) {
-              // 2번이 켜져있음 -> 둘다 ON (FA)
-              static const uint8_t data[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFA, 0x0D, 0x0D};
-              id(uart_bus).write_array(data, 22);
-            } else {
-              // 2번이 꺼져있음 -> 1번만 ON (FB)
-              static const uint8_t data[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D};
-              id(uart_bus).write_array(data, 22);
-            }
+      - lambda: |-
+          bool l2 = id(master_room_light_2).remote_values.is_on();
+          uint8_t cs = l2 ? 0xFA : 0xFB;
+          uint8_t l2_val = l2 ? 0xFF : 0x00;
+          uint8_t p[22] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, l2_val, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+          id(uart_bus).write_array(p, 22);
     on_turn_off:
-      then:
-        - lambda: |-
-            if (id(master_room_light_2).remote_values.is_on()) {
-              // 2번이 켜져있음 -> 2번만 유지 (FB)
-              static const uint8_t data[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D};
-              id(uart_bus).write_array(data, 22);
-            } else {
-              // 둘다 OFF (FC)
-              static const uint8_t data[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFC, 0x0D, 0x0D};
-              id(uart_bus).write_array(data, 22);
-            }
+      - lambda: |-
+          bool l2 = id(master_room_light_2).remote_values.is_on();
+          uint8_t cs = l2 ? 0xFB : 0xFC;
+          uint8_t l2_val = l2 ? 0xFF : 0x00;
+          uint8_t p[22] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, l2_val, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+          id(uart_bus).write_array(p, 22);
+
+  # 안방 조명 2
+  - platform: uartex
+    name: "Master Room Light 2"
+    id: master_room_light_2
+    state:
+      data: [0x30, 0xd0, 0x00, 0x0e, 0x01]
+      mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
+    state_on: { offset: 9, data: [0xff] }
+    state_off: { offset: 9, data: [0x00] }
+    on_turn_on:
+      - lambda: |-
+          bool l1 = id(master_room_light_1).remote_values.is_on();
+          uint8_t cs = l1 ? 0xFA : 0xFB;
+          uint8_t l1_val = l1 ? 0xFF : 0x00;
+          uint8_t p[22] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1_val, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+          id(uart_bus).write_array(p, 22);
+    on_turn_off:
+      - lambda: |-
+          bool l1 = id(master_room_light_1).remote_values.is_on();
+          uint8_t cs = l1 ? 0xFB : 0xFC;
+          uint8_t l1_val = l1 ? 0xFF : 0x00;
+          uint8_t p[22] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1_val, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+          id(uart_bus).write_array(p, 22);
 
   # 안방 조명 2
  light:
