--- a/kocom.yaml
+++ b/kocom.yaml
@@ -82,7 +82,7 @@ logger:
 
 
 light:
-  # 안방 조명 1
+  # --- 안방 조명 1 ---
   - platform: uartex
     name: "Master Room Light 1"
     id: master_room_light_1
@@ -91,82 +91,31 @@ light:
       mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
     state_on: { offset: 8, data: [0xff] }
     state_off: { offset: 8, data: [0x00] }
-    # command_on/off를 비워두어 내부 충돌 방지
-    on_turn_on:
-      - lambda: |-
-          bool l2 = id(master_room_light_2).remote_values.is_on();
-          uint8_t cs = l2 ? 0xFA : 0xFB;
-          uint8_t l2_val = l2 ? 0xFF : 0x00;
-          uint8_t p[22] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, l2_val, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
-          id(uart_bus).write_array(p, 22);
-    on_turn_off:
-      - lambda: |-
-          bool l2 = id(master_room_light_2).remote_values.is_on();
-          uint8_t cs = l2 ? 0xFB : 0xFC;
-          uint8_t l2_val = l2 ? 0xFF : 0x00;
-          uint8_t p[22] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, l2_val, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
-          id(uart_bus).write_array(p, 22);
-
-  # 안방 조명 2
-  - platform: uartex
-    name: "Master Room Light 2"
-    id: master_room_light_2
-    state:
-      data: [0x30, 0xd0, 0x00, 0x0e, 0x01]
-      mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
-    state_on: { offset: 9, data: [0xff] }
-    state_off: { offset: 9, data: [0x00] }
-    on_turn_on:
-      - lambda: |-
-          bool l1 = id(master_room_light_1).remote_values.is_on();
-          uint8_t cs = l1 ? 0xFA : 0xFB;
-          uint8_t l1_val = l1 ? 0xFF : 0x00;
-          uint8_t p[22] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1_val, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
-          id(uart_bus).write_array(p, 22);
-    on_turn_off:
-      - lambda: |-
-          bool l1 = id(master_room_light_1).remote_values.is_on();
-          uint8_t cs = l1 ? 0xFB : 0xFC;
-          uint8_t l1_val = l1 ? 0xFF : 0x00;
-          uint8_t p[22] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1_val, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
-          id(uart_bus).write_array(p, 22);
-
-  # 안방 조명 2
- light:
-  # 안방 조명 1
-  - platform: uartex
-    name: "Master Room Light 1"
-    id: master_room_light_1
-    state:
-      data: [0x30, 0xd0, 0x00, 0x0e, 0x01]
-      mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
-    state_on: { offset: 8, data: [0xff] }
-    state_off: { offset: 8, data: [0x00] }
-    # 명령 전송 시 상대방 상태를 확인하는 if문 로직
+    # [중요] 기존 command_on/off는 삭제하고 아래 on_turn_on/off만 남깁니다.
     on_turn_on:
       - lambda: |-
           if (id(master_room_light_2).remote_values.is_on()) {
-            // 2번이 켜져있을 때 1번을 켜면 -> 둘 다 켜짐 패킷 (FA)
-            static const uint8_t p_both_on[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFA, 0x0D, 0x0D};
-            id(uart_bus).write_array(p_both_on, 22);
+            // 2번 ON 상태면 -> 1번 ON + 2번 ON (CS: FA)
+            static const uint8_t p[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFA, 0x0D, 0x0D};
+            id(uart_bus).write_array(p, 22);
           } else {
-            // 2번이 꺼져있을 때 1번을 켜면 -> 1번만 켜짐 패킷 (FB)
-            static const uint8_t p_1_on[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D};
-            id(uart_bus).write_array(p_1_on, 22);
+            // 2번 OFF 상태면 -> 1번 ON + 2번 OFF (CS: FB)
+            static const uint8_t p[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D};
+            id(uart_bus).write_array(p, 22);
           }
     on_turn_off:
       - lambda: |-
           if (id(master_room_light_2).remote_values.is_on()) {
-            // 2번이 켜져있을 때 1번을 끄면 -> 2번만 유지 패킷 (FB)
-            static const uint8_t p_2_on[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D};
-            id(uart_bus).write_array(p_2_on, 22);
+            // 2번 ON 상태면 -> 1번 OFF + 2번 유지 (CS: FB)
+            static const uint8_t p[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D};
+            id(uart_bus).write_array(p, 22);
           } else {
-            // 둘 다 꺼질 때 -> 모두 꺼짐 패킷 (FC)
-            static const uint8_t p_all_off[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFC, 0x0D, 0x0D};
-            id(uart_bus).write_array(p_all_off, 22);
+            // 둘 다 OFF (CS: FC)
+            static const uint8_t p[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFC, 0x0D, 0x0D};
+            id(uart_bus).write_array(p, 22);
           }
 
-  # 안방 조명 2
+  # --- 안방 조명 2 ---
   - platform: uartex
     name: "Master Room Light 2"
     id: master_room_light_2
@@ -178,24 +127,24 @@ light:
     on_turn_on:
       - lambda: |-
           if (id(master_room_light_1).remote_values.is_on()) {
-            // 1번이 켜져있을 때 2번을 켜면 -> 둘 다 켜짐 패킷 (FA)
-            static const uint8_t p_both_on[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFA, 0x0D, 0x0D};
-            id(uart_bus).write_array(p_both_on, 22);
+            // 1번 ON 상태면 -> 1번 ON + 2번 ON (CS: FA)
+            static const uint8_t p[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFA, 0x0D, 0x0D};
+            id(uart_bus).write_array(p, 22);
           } else {
-            // 1번이 꺼져있을 때 2번을 켜면 -> 2번만 켜짐 패킷 (FB)
-            static const uint8_t p_2_on[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D};
-            id(uart_bus).write_array(p_2_on, 22);
+            // 1번 OFF 상태면 -> 1번 OFF + 2번 ON (CS: FB)
+            static const uint8_t p[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D};
+            id(uart_bus).write_array(p, 22);
           }
     on_turn_off:
       - lambda: |-
           if (id(master_room_light_1).remote_values.is_on()) {
-            // 1번이 켜져있을 때 2번을 끄면 -> 1번만 유지 패킷 (FB)
-            static const uint8_t p_1_on[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D};
-            id(uart_bus).write_array(p_1_on, 22);
+            // 1번 ON 상태면 -> 1번 유지 + 2번 OFF (CS: FB)
+            static const uint8_t p[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D};
+            id(uart_bus).write_array(p, 22);
           } else {
-            // 둘 다 꺼질 때 -> 모두 꺼짐 패킷 (FC)
-            static const uint8_t p_all_off[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFC, 0x0D, 0x0D};
-            id(uart_bus).write_array(p_all_off, 22);
+            // 둘 다 OFF (CS: FC)
+            static const uint8_t p[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFC, 0x0D, 0x0D};
+            id(uart_bus).write_array(p, 22);
           }
             
   # 세나방 (Room 2)
