--- a/kocom.yaml
+++ b/kocom.yaml
@@ -82,70 +82,59 @@ logger:
 
 
 light:
-  # --- 안방 조명 1 ---
+  # 1. 상태 모니터링 전용 (사용자 화면에는 보이지 않음)
   - platform: uartex
-    name: "Master Room Light 1"
-    id: master_room_light_1
+    id: raw_l1
+    internal: true
     state:
       data: [0x30, 0xd0, 0x00, 0x0e, 0x01]
       mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
     state_on: { offset: 8, data: [0xff] }
     state_off: { offset: 8, data: [0x00] }
-    # [중요] 기존 command_on/off는 삭제하고 아래 on_turn_on/off만 남깁니다.
-    on_turn_on:
-      - lambda: |-
-          if (id(master_room_light_2).remote_values.is_on()) {
-            // 2번 ON 상태면 -> 1번 ON + 2번 ON (CS: FA)
-            static const uint8_t p[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFA, 0x0D, 0x0D};
-            id(uart_bus).write_array(p, 22);
-          } else {
-            // 2번 OFF 상태면 -> 1번 ON + 2번 OFF (CS: FB)
-            static const uint8_t p[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D};
-            id(uart_bus).write_array(p, 22);
-          }
-    on_turn_off:
-      - lambda: |-
-          if (id(master_room_light_2).remote_values.is_on()) {
-            // 2번 ON 상태면 -> 1번 OFF + 2번 유지 (CS: FB)
-            static const uint8_t p[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D};
-            id(uart_bus).write_array(p, 22);
-          } else {
-            // 둘 다 OFF (CS: FC)
-            static const uint8_t p[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFC, 0x0D, 0x0D};
-            id(uart_bus).write_array(p, 22);
-          }
 
-  # --- 안방 조명 2 ---
   - platform: uartex
-    name: "Master Room Light 2"
-    id: master_room_light_2
+    id: raw_l2
+    internal: true
     state:
       data: [0x30, 0xd0, 0x00, 0x0e, 0x01]
       mask: [0xff, 0xf0, 0xff, 0xff, 0xff]
     state_on: { offset: 9, data: [0xff] }
     state_off: { offset: 9, data: [0x00] }
+
+  # 2. 실제 HA 제어용 스위치 (상태 유지 로직 포함)
+  - platform: template
+    name: "Master Room Light 1"
+    id: master_room_light_1
+    lambda: "return id(raw_l1).remote_values.is_on();"
     on_turn_on:
       - lambda: |-
-          if (id(master_room_light_1).remote_values.is_on()) {
-            // 1번 ON 상태면 -> 1번 ON + 2번 ON (CS: FA)
-            static const uint8_t p[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFA, 0x0D, 0x0D};
-            id(uart_bus).write_array(p, 22);
-          } else {
-            // 1번 OFF 상태면 -> 1번 OFF + 2번 ON (CS: FB)
-            static const uint8_t p[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D};
-            id(uart_bus).write_array(p, 22);
-          }
+          uint8_t l2 = id(raw_l2).remote_values.is_on() ? 0xFF : 0x00;
+          uint8_t cs = (l2 == 0xFF) ? 0xFA : 0xFB;
+          static const uint8_t p[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+          id(uart_bus).write_array(p, 22);
     on_turn_off:
       - lambda: |-
-          if (id(master_room_light_1).remote_values.is_on()) {
-            // 1번 ON 상태면 -> 1번 유지 + 2번 OFF (CS: FB)
-            static const uint8_t p[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFB, 0x0D, 0x0D};
-            id(uart_bus).write_array(p, 22);
-          } else {
-            // 둘 다 OFF (CS: FC)
-            static const uint8_t p[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFC, 0x0D, 0x0D};
-            id(uart_bus).write_array(p, 22);
-          }
+          uint8_t l2 = id(raw_l2).remote_values.is_on() ? 0xFF : 0x00;
+          uint8_t cs = (l2 == 0xFF) ? 0xFB : 0xFC;
+          static const uint8_t p[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, 0x00, l2, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+          id(uart_bus).write_array(p, 22);
+
+  - platform: template
+    name: "Master Room Light 2"
+    id: master_room_light_2
+    lambda: "return id(raw_l2).remote_values.is_on();"
+    on_turn_on:
+      - lambda: |-
+          uint8_t l1 = id(raw_l1).remote_values.is_on() ? 0xFF : 0x00;
+          uint8_t cs = (l1 == 0xFF) ? 0xFA : 0xFB;
+          static const uint8_t p[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+          id(uart_bus).write_array(p, 22);
+    on_turn_off:
+      - lambda: |-
+          uint8_t l1 = id(raw_l1).remote_values.is_on() ? 0xFF : 0x00;
+          uint8_t cs = (l1 == 0xFF) ? 0xFB : 0xFC;
+          static const uint8_t p[] = {0xAA, 0x55, 0x30, 0xBC, 0x00, 0x01, 0x00, 0x0E, 0x01, 0x00, l1, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, cs, 0x0D, 0x0D};
+          id(uart_bus).write_array(p, 22);
             
   # 세나방 (Room 2)
   - platform: uartex
